[gd_scene load_steps=2 format=3 uid="uid://bcwsdtfx72kd0"]

[ext_resource type="Script" path="res://controllers/wave_controller.gd" id="1_r34js"]

[node name="WaveController" type="Node2D"]
script = ExtResource("1_r34js")

[node name="WaveTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="WaveTimer" to="." method="start_wave"]
